2008-11-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valagobjectmodule.vala:

	Move construct property assignment to GObjectModule

2008-11-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentmodule.vala:
	* gobject/valagsignalmodule.vala:

	Move signal connection and disconnection to GSignalModule

2008-11-04  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraymodule.vala:
	* gobject/valagsignalmodule.vala:

	Move detailed signal emission to GSignalModule

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.5.1 release

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valadbusclientmodule.vala:

	Move dbus_use_ptr_array to DBusClientModule

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodedelegatemodule.vala:
	* gobject/valaccodedynamicpropertymodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valagerrormodule.vala:

	Add CCodeDelegateModule, move more code to GErrorModule

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valagasyncmodule.vala:
	* gobject/valagerrormodule.vala:

	Move code generation for try and yield statements to GErrorModule
	and GAsyncModule, resp.

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodeassignmentmodule.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodedynamicpropertymodule.vala:
	* gobject/valaccodedynamicsignalmodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionmodule.vala:
	* gobject/valaccodememberaccessmodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valaccodemodule.vala:
	* gobject/valaccodestructmodule.vala:
	* gobject/valaclassregisterfunction.vala:
	* gobject/valadbusclientmodule.vala: