@@ -1,5 +1,12 @@
 2008-11-04  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valaccodearraymodule.vala:
+	* gobject/valaccodebasemodule.vala:
+
+	Move array dup wrapper generation to CCodeArrayModule
+
+2008-11-04  Jürg Billeter  <j@bitron.ch>
+
 	* gobject/valaccodebasemodule.vala:
 	* gobject/valagobjectmodule.vala:
 
